--- a/web/link.html
+++ b/web/link.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AFR-Cloud.NET || Link Generator</title>
+    <title>ANANG.MY.ID || Link Generator</title>
 
     <!-- Favicon -->
     <link rel="icon" href="https://raw.githubusercontent.com/AFRcloud/BG/main/icons8-film-noir-80.png">
@@ -38,7 +38,7 @@
             <div class="tech-detail tech-detail-3"></div>
 
             <div class="title-container">
-                <h1 class="title">AFR-Cloud.NET</h1>
+                <h1 class="title">ANANG.MY.ID</h1>
                 <p class="subtitle">Advanced Link Generator</p>
             </div>
 
@@ -536,7 +536,7 @@
         <div class="circuit-dot circuit-dot-3"></div>
         <div class="circuit-dot circuit-dot-4"></div>
 
-        <div class="footer-logo">AFR-Cloud.NET</div>
+        <div class="footer-logo">ANANG.MY.ID</div>
         <div class="footer-powered">POWERED BY SECURE TECHNOLOGY</div>
         <div class="footer-social">
             <a href="https://t.me/Noir7R" class="social-link" target="_blank">
@@ -583,7 +583,7 @@
                     <i class="fas fa-times"></i>
                 </button>
 
-                <h3 class="donation-title">Support AFR-Cloud.NET</h3>
+                <h3 class="donation-title">Support ANANG.MY.ID</h3>
                 <p class="donation-text">Your donation helps keep our services running</p>
 
                 <div class="qris-container">
